--- a/src/components/_ui/button/button.module.scss
+++ b/src/components/_ui/button/button.module.scss
@@ -1,11 +1,21 @@
 .button{
-    font-size: var(--text-sm);
-    padding: 10px 20px;
+    font-family: 'Gothic A1', sans-serif;
+    font-weight: 300;
+    text-transform: uppercase;
+    font-size: var(--text-xs);
+    padding: 10px 15px;
     color: var(--text);
-    border: 1px solid var(--text);
-    border-radius: 30px;
+    border: 0.5px solid var(--text);
+    border-radius: 10px;
     background-color: transparent;
     cursor: pointer;
     margin-top: 20px;
+    transition: 0.3s ease-in-out;
+}
+
+.button:hover{
+    color: var(--background-dark);
+    background-color: var(--text);
+    border-radius: 5px;
 }
 
