--- a/src/components/home/hero/hero.module.scss
+++ b/src/components/home/hero/hero.module.scss
@@ -17,6 +17,8 @@
         font-size: 4.0rem;
         text-transform: uppercase;
         text-align: center;
+        margin-left: 25px;
+
     }
 
     img{
