--- a/src/components/_ui/modal/modal.module.scss
+++ b/src/components/_ui/modal/modal.module.scss
@@ -1,20 +1,75 @@
-
-.background {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: var(--bg-opaque);
-    z-index: 1000;
-}
-
 .modal {
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 150px;
-    background-color: var(--background);
-    border-radius: 8px;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100000000;
+
+    height: 100vh;
+    padding: 4.8rem 1.2rem;
+    background: var(--bg-opaque);
+    backdrop-filter: blur(12px);
+
+    overflow-y: scroll;
+
+    display: flex;
+    justify-content: center;
+
+    cursor: pointer;
 }
+
+.modalCard {
+    width: 100%;
+    max-width: 700px;
+    height: fit-content;
+
+
+    border-radius: 1.2rem;
+    overflow: hidden;
+
+    background: var(--background-dark);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+
+    cursor: auto;
+}
+
+.modalImage {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
+.modalContent {
+    padding: 2.4rem;
+
+    h2 {
+        margin-bottom: 20px;
+        font-size: var(--text-lg);
+    }
+}
+
+.suppliedContent {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+
+    font-size: var(--text-xs);
+    font-family: "Open Sans";
+    font-weight: 300;
+
+  }
+
+  .closeModalBtn {
+    background: none;
+    border: none;
+  
+    color: var(--text);
+  
+    font-size: var(--text-md);
+  
+    position: absolute;
+    top: 1.2rem;
+    right: 1.2rem;
+  
+    cursor: pointer;
+  }
