--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,7 @@
   --text: rgb(235, 236, 243);
   --brand: #ffecc7;
 
+  --text-xxs: 1.2rem;
   --text-xs: 1.8rem;
   --text-sm: 2.0rem;
   --text-md: 2.8rem;
