--- a/src/components/home/news/news.module.scss
+++ b/src/components/home/news/news.module.scss
@@ -1,11 +1,11 @@
 .container {
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .title {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     margin-left: 20px;
-    font-size: var(--text-xl);
+    font-size: var(--text-lg);
 }
 
 .swiper {
