--- a/src/components/home/news/news.module.scss
+++ b/src/components/home/news/news.module.scss
@@ -41,11 +41,13 @@
         h2 {
             text-transform: uppercase;
             font-size: var(--text-md);
+            color: var(--text);
         }
 
         h3 {
             font-family: "Gothic A1", sans-serif;
             font-size: var(--text-sm);
             font-weight: 100;
+            color: var(--text);
         }
 }
